--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
@@ -12,7 +12,6 @@
 	<# 
 	                Transpiler transpiler = new Transpiler();
 	                transpiler.addRequiredScriptsToHost();
-	                var test = transpiler.testme();
 	                transpiler.initTypescriptLanguageService();
 
 	                List<KeyValuePair<string,List<string>>> serviceEnums = transpiler.getServiceEnums();
@@ -73,7 +72,7 @@ namespace CSharpTypeScriptLanguageServices {
 		    if (tsInterface.Value.Count > 0)
 		    {
 	#>  
-	    interface <#= tsInterface.Key #> {  
+	    public class <#= tsInterface.Key #> {  
 		    <#
 		        foreach (var interfaceMember in tsInterface.Value)
 		        {
@@ -119,7 +118,7 @@ namespace CSharpTypeScriptLanguageServices {
 				name = Regex.Replace(name, @"\boperator\b", "tsOperator");
 
 		    #>
-		          <#= type #> <#= name #>  { get; set; }
+		         public <#= type #> <#= name #>  { get; set; }
 		    <#
 		        }
 		    #>
@@ -130,20 +129,40 @@ namespace CSharpTypeScriptLanguageServices {
 	}
 	#> 
 
-    interface SymbolTable {
-	string[] Symbol { get; set; }
+    public class SymbolTable {
+	public string[] Symbol { get; set; }
     }
 
-    interface IScriptSnapshot
+    public class IScriptSnapshot
     {
-        string getText(int start, int end);
-        int getLength();
-        int[] getLineStartPositions();
-        TextChangeRange getChangeRange(IScriptSnapshot oldSnapshot);
+       public string getText(int start, int end){
+       return null;
+       }
+       public int getLength(){
+       return 0;
+       }
+       public int[] getLineStartPositions(){
+       return null;
+       }
+       public TextChangeRange getChangeRange(IScriptSnapshot oldSnapshot){
+       	return null;
+       }
     }
 
-    interface TypeMapper {
-        object Type { get; set; }
+    public class TypeMapper {
+       public object Type { get; set; }
+    }
+
+        // text change information 
+    public class TextChange {
+		public int pos { get; set; }
+		public int deleteLen { get; set; }
+		public string insertedText { get; set; }
+        }
+
+    public class Program
+    {
+
     }
 }
 
