--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
@@ -37,7 +37,7 @@
 using System;
 using System.Collections.Generic;
 
-namespace CSharpTypeScriptLanguageServices { 
+namespace TypeScriptLanguageService { 
 	<# 
 	foreach ( var enums in enumList) 
 	   {
@@ -133,20 +133,12 @@ namespace CSharpTypeScriptLanguageServices {
 	public string[] Symbol { get; set; }
     }
 
-    public class IScriptSnapshot
+    public interface IScriptSnapshot
     {
-       public string getText(int start, int end){
-       return null;
-       }
-       public int getLength(){
-       return 0;
-       }
-       public int[] getLineStartPositions(){
-       return null;
-       }
-       public TextChangeRange getChangeRange(IScriptSnapshot oldSnapshot){
-       	return null;
-       }
+        string getText(int start, int end);
+        int getLength();
+        int[] getLineStartPositions();
+        TextChangeRange getChangeRange(IScriptSnapshot oldSnapshot);
     }
 
     public class TypeMapper {
