Make V8Host independent from the application host
To make the V8TypeScriptHostEnvironment independent form the application
host we seperated all v8 related objects from the application objects

- V8CancelationToken encapsulates CancelationToken
- V8ScriptSnapshot encapsulates ScriptSnapshot
- ...
to marshal opjects for v8.

- moved subs for templates in a separate folder.
- Added Iscriptsnapshot manually to generated objects

--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
@@ -152,6 +152,24 @@ namespace TypeScriptLanguageService {
 		public string insertedText { get; set; }
         }
 
+    public interface CancellationToken {
+              bool isCancellationRequested();
+    }
+   public interface ILanguageServiceHost {
+        CompilerOptions getCompilationSettings();
+        string getNewLine();
+        string[] getScriptFileNames();
+        string getScriptVersion(string fileName);
+        IScriptSnapshot getScriptSnapshot(string fileName);
+        string getLocalizedDiagnosticMessages();
+        CancellationToken getCancellationToken();
+        string getCurrentDirectory();
+        string getDefaultLibFileName(CompilerOptions options);
+        void log   (string s);
+        void trace (string s);
+        void error (string s);
+    }
+
     public class Program
     {
 
