Change CancellationToken to ICancellationToken

--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
@@ -152,7 +152,7 @@ namespace TypeScriptLanguageService {
 		public string insertedText { get; set; }
         }
 
-    public interface CancellationToken {
+    public interface ICancellationToken {
               bool isCancellationRequested();
     }
    public interface ILanguageServiceHost {
@@ -162,7 +162,7 @@ namespace TypeScriptLanguageService {
         string getScriptVersion(string fileName);
         IScriptSnapshot getScriptSnapshot(string fileName);
         string getLocalizedDiagnosticMessages();
-        CancellationToken getCancellationToken();
+        ICancellationToken getCancellationToken();
         string getCurrentDirectory();
         string getDefaultLibFileName(CompilerOptions options);
         void log   (string s);
