Change CompilerOptions to ICompilerOptions

--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
@@ -215,7 +215,7 @@ namespace TypeScriptLanguageService {
               bool isCancellationRequested();
     }
    public interface ILanguageServiceHost {
-        CompilerOptions getCompilationSettings();
+        ICompilerOptions getCompilationSettings();
         string getNewLine();
         string[] getScriptFileNames();
         string getScriptVersion(string fileName);
@@ -223,7 +223,7 @@ namespace TypeScriptLanguageService {
         string getLocalizedDiagnosticMessages();
         ICancellationToken getCancellationToken();
         string getCurrentDirectory();
-        string getDefaultLibFileName(CompilerOptions options);
+        string getDefaultLibFileName(ICompilerOptions options);
         void log   (string s);
         void trace (string s);
         void error (string s);
