[WIP] Use first property of Union Types
To support Union types is difficult:
For instance:

    export interface Diagnostic {
        file: SourceFile;
        start: number;
        length: number;
        messageText: string | DiagnosticMessageChain;
        category: DiagnosticCategory;
        code: number;
    }

messageText can be either string or DiagnosticMessageChain which
represents:

    export interface DiagnosticMessageChain {
        messageText: string;
        category: DiagnosticCategory;
        code: number;
        next?: DiagnosticMessageChain;
    }

Supporting union types of string | string [] is possible we could just
use:
class {string[] messageText {get;set;}}

But how to represent messageText: string | DiagnosticMessageChain

Option1:
	We use reflection with  TypeMapper<T> function and
	just use string.
Option2:
	use a DynamicObject for union types.Then the user is responible
	for type checking.
	Generate with a T4 template the v8 function call and abandoned
	the reflection approach of the TypeMapper function.

--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypescriptTypes.tt
@@ -78,9 +78,10 @@ namespace TypeScriptLanguageService {
             <#
                 foreach (var interfaceMember in tsInterface.Value)
                 {
-                    var interfaceMemberType = interfaceMember.Key.Replace("boolean","bool")
+                    
+                    var interfaceMemberType = interfaceMember.Key.Split('|')[0];
+                    interfaceMemberType = interfaceMemberType.Replace("boolean","bool")
                                 .Replace("number","int")
-                                .Replace("|","")
                                 .Replace("any","object")
                                 .Replace("Map<Symbol>","object")
                                 .Replace("Map<int>","object")
@@ -139,9 +140,9 @@ namespace TypeScriptLanguageService {
 <#
                 foreach (var interfaceMember in tsInterface.Value)
                 {
-                    var type = interfaceMember.Key.Replace("boolean","bool")
+                    var type = interfaceMember.Key.Split('|')[0];
+                    type = type.Replace("boolean","bool")
                                 .Replace("number","int")
-                                .Replace("|","")
                                 .Replace("any","object")
                                 .Replace("Map<Symbol>","object")
                                 .Replace("Map<int>","object")
