Add interface for TypescriptLanugaeService

--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypeScriptLanguageService.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypeScriptLanguageService.tt
@@ -30,7 +30,7 @@ using System.Diagnostics;
 namespace TypeScriptLanguageService { 
 
 
-	public class TypeScriptLanguageServices {
+	public class TypeScriptLanguageServices : ITypeScriptLanguageServices {
 
 	V8Engine v8Engine = null;
 
