--- a/TypeScriptLanguageServiceTranspiler/T4Templates/TypeScriptLanguageService.tt
+++ b/TypeScriptLanguageServiceTranspiler/T4Templates/TypeScriptLanguageService.tt
@@ -44,10 +44,8 @@ namespace TypeScriptLanguageService {
 
 	        v8Engine = new V8Engine();
 			v8Engine.GlobalObject.SetProperty(typeof(V8TypeScriptServiceHostEnv), V8PropertyAttributes.Locked, null, true);
-			v8Engine.GlobalObject.SetProperty(typeof(V8ScriptSnapshot), V8PropertyAttributes.Locked, null, true);
+			v8Engine.GlobalObject.SetProperty(typeof(V8ScriptSnapshotAdapter), V8PropertyAttributes.Locked, null, true);
 			v8Engine.GlobalObject.SetProperty(typeof(V8CancellationToken), V8PropertyAttributes.Locked, null, true);
-			v8Engine.GlobalObject.SetProperty(typeof(TextChangeRange), V8PropertyAttributes.Locked, null, true);
-			v8Engine.GlobalObject.SetProperty(typeof(TextSpan), V8PropertyAttributes.Locked, null, true);
 
             this.Host = host;
             this.V8Host = new V8TypeScriptServiceHostEnv(v8Engine,host);
